# langgraph

./: .gitignore  README.md  pyproject.toml
langgraph_recipes/: calculator_agent.py  chat_agent.py  tool_agent.py
langgraph_recipes/common/: agent_simple.py  agent_state.py  simple_graph_agent.py
langgraph_recipes/common/agents/: single_tool_usage_agent.py
langgraph_recipes/examples/: file_listing_example.py
langgraph_recipes/notebook_autodoc/: simple_graph_agent.py
langgraph_recipes/notebook_autodoc/agents/: autodoc_notebook.py  markdown_combiner.py
langgraph_recipes/notebook_autodoc/input/notebooks/merchant_promotion_insights/: AnalyticalCardsCustomerCharacteristics.md  AnalyticalCardsCustomerCharacteristics.py  AnalyticalCustomerActivity.md  AnalyticalCustomerActivity.py  AnalyticalCustomerActivityInsights.md  AnalyticalCustomerActivityInsights.py  AnalyticalCustomerSectorCharacteristics.md  AnalyticalCustomerSectorCharacteristics.py  AnalyticalCustomerSectorVolumes.md  (+31 more)
langgraph_recipes/notebook_autodoc/input/prompts/: api_func_design_prompt.md  func_design_combiner_prompt.md  markdown_combiner_prompt.md
langgraph_recipes/notebook_autodoc/input/table_descriptions/: create_cards_customer_characteristics.sql  create_customer.sql  create_customer_sector_volumes.sql  create_mcc_categories.sql  create_postal_codes.sql
langgraph_recipes/recipe/: calculator_agent.py  chat_agent.py  tool_agent.py
langgraph_recipes/tools/calculator/: calculator.py
langgraph_recipes/tools/file_listing/: file_listing_example.py  file_tools.py
utils/: model_selector.py
